fixed the flickering effect

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,12 +54,6 @@ section {
   html {
     scroll-behavior: smooth;
   }
-  
-  * {
-    transition-property: transform, opacity, background-color, border-color, color, fill, stroke;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms;
-  }
 }
 
 /* LIGHT MODE */
